feat: add images in login page

--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,6 +1,6 @@
 <main>
 	<section>
-		<img/>
+		<img src="/assets/logo-login.svg">
 		<h2></h2>
 
 		<button></button>
@@ -11,6 +11,6 @@
 	</section>
 	<section>
 		<h1>You Should, MoveIt!</h1>
-		<img/>
+		<img src="/assets/main-ilustration.svg">
 	</section>
 </main>
