--- a/src/app/components/primary-input/primary-input.component.scss
+++ b/src/app/components/primary-input/primary-input.component.scss
@@ -1,12 +1,35 @@
 @import "../../../styles/variables.scss";
 
-input{
-	border: none;
-	border-radius: 8px;
-	background-color: $gray-secondary-bg;
-
+.input-wrapper{
 	color: $text-color;
 	font-size: 16px;
-	padding: 12px 0 12px 20px;
-	width: 100%;
+	text-align: start;
+
+	label{
+		margin-bottom: 10px;
+	}
+	
+	.input-content{
+		width: 100%;
+		border-radius: 8px; 
+		display: flex;
+		
+		.icon{
+			border-radius: 0 8px 8px 0;
+			padding: 12px;
+			background-color: $primary-color;
+			img{
+				width: 20px; 
+			}
+		}
+		input{
+			border: none;
+			background-color: $gray-secondary-bg;
+		
+			border-radius: 8px 0  0	8px;
+			padding: 12px 0 12px 20px;
+			width: 100%;
+		}
+
+	}
 }
