--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,6 +4,24 @@
 	secondaryBtnText="Signup Now"
 >
 	<form [formGroup]="loginForm">
-		<app-primary-input></app-primary-input>
+		<app-primary-input
+			formControlName="email"
+			label="email"
+			inputName="email"
+			label="Email "
+			placeholder="example@email.com"
+			type="email"
+		>
+			<img src="/assets/email-icon.svg">
+		</app-primary-input>
+		<app-primary-input
+			formControlName="password"		
+			inputName="password"
+			type="password"
+			label="Your Password"
+		>
+			<img src="/assets/password-icon.svg">
+		</app-primary-input>
+		<span>Forgot password?</span>
 	</form>
 </app-default-login-layout>
