--- a/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -69,7 +69,12 @@ main{
 				background: transparent;
 				padding: 12px 24px;
 				cursor: pointer;
-	
+				
+				&:disabled{
+					opacity: 0.8;
+					cursor: not-allowed;
+				}
+
 				&.btn-primary{
 					background-color: $primary-color;
 					color: white;
