feat: finish version 1.0

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,7 +11,7 @@
 			formControlName="email"
 			label="email"
 			inputName="email"
-			label="Email "
+			label="Email Address"
 			placeholder="example@email.com"
 			type="email"
 		>
@@ -21,7 +21,8 @@
 			formControlName="password"		
 			inputName="password"
 			type="password"
-			label="Your Password"
+			label="Password"
+			placeholder="Enter your password"
 		>
 			<img src="/assets/password-icon.svg">
 		</app-primary-input>
